GF-41681: Fixes to Panel, Panels, Drawer for 20px spacing consistency. - Refactor Panel, Panel, Drawer spacing rules - Fixed BreadcrumbArranger spacing logic, including: 	- Use new "breadcrumbGap" property to add gap between breadcrumbs and panels, needed for AlwaysViewing pattern 	- When panelCoverRatio=1 (left-aligned breadcrumb, inset by padding) - Samples use `enyo-fit` on moon.Panel/s, which is preferred sizing method now - Drawer activator now absolutely positioned (with new wrapper to put its spotlight bounds outside the screen, to prevent overlap with Panels which would make it non-focusable - Adjust spacing in moon.Drawer client areas - Remove spotlight:container from Drawers: causes more issues than it's worth - Set spotlight setting on moon.Panels showHideHandle dynamically - Unrelated: Update spinner (properly aliased around background color) DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/Drawer.less
+++ b/css/Drawer.less
@@ -1,7 +1,6 @@
-.moon-drawer {
-
+.moon-drawer-partial-client {
+	padding: 40px 20px 20px;
 }
-
 .moon-drawer-client {
-	padding:20px;
+	padding: 20px;
 }
