--- a/css/Panels.less
+++ b/css/Panels.less
@@ -2,10 +2,10 @@
 .moon-panels.activity,
 .moon-panels.always-viewing {
     position: absolute;
-    box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding: 0;
+    box-sizing: border-box;
+    padding: 20px 10px;
 	overflow: visible;
 	-webkit-transform: translate3d(0, 0, 0);
 	pointer-events: none;
