--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -2845,8 +2845,15 @@
   -webkit-transform: scale3d(1, 1, 1);
   overflow: hidden;
   padding: 0;
-  margin: 0;
+  margin: 20px;
   height: 100%;
+}
+.moon-panel .moon-header {
+  margin: 0 10px;
+}
+.moon-panels .moon-panel {
+  height: auto;
+  margin: 0;
 }
 .moon-panel-viewport {
   -webkit-transform: scale3d(1, 1, 1);
@@ -2855,7 +2862,6 @@
 }
 .moon-panel-content-wrapper {
   -webkit-transform: scale3d(1, 1, 1);
-  padding: 10px;
   z-index: 2;
   box-sizing: border-box;
 }
@@ -2867,7 +2873,7 @@
 /* Breadcrumb */
 .moon-panel-breadcrumb {
   -webkit-transform: scale3d(1, 1, 1);
-  width: 220px;
+  width: 230px;
   height: 370px;
   position: absolute;
   top: 0px;
@@ -2876,9 +2882,9 @@
 .moon-panel-breadcrumb-viewport {
   -webkit-transform: scale3d(1, 1, 1);
   position: absolute;
-  bottom: 0px;
-  left: 9px;
-  right: 0px;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 200px;
   overflow: hidden;
 }
@@ -2886,13 +2892,12 @@
   -webkit-transform: scale3d(1, 1, 1);
   margin: 10px 0 0;
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   left: 0;
   height: 360px;
   width: 100%;
-  padding: 5px 10px 10px;
+  padding: 0 10px 10px;
   box-sizing: border-box;
-  border-top: 2px solid #4b4b4b;
 }
 .moon-panel-mini-header {
   margin-top: 25px;
@@ -2906,6 +2911,8 @@
 }
 .moon-panel-mini-header-title-above {
   color: #4b4b4b;
+  border-top: 2px solid #4b4b4b;
+  padding-top: 5px;
 }
 .spotlight .moon-panel-mini-header-title-above {
   color: #ffffff;
@@ -2914,8 +2921,11 @@
   background: #ff2f7d;
   color: #ffffff;
 }
+.moon-panel .moon-panel-mini-header-wrapper.spotlight .moon-panel-mini-header-title-above {
+  border-top: 1px transparent;
+}
 /* Activity Panels Overrides */
-.moon-panels.activity .moon-panel-mini-header-wrapper {
+.moon-panels.activity .moon-panel-mini-header-title-above {
   border-top: 2px solid #4b4b4b;
 }
 .moon-panels.activity .moon-panel-mini-header,
@@ -2926,17 +2936,14 @@
 .moon-panels.activity .moon-panel-mini-header-wrapper.spotlight .moon-panel-mini-header-title-above {
   color: #ffffff;
 }
-.moon-panel .moon-panel-mini-header-wrapper.spotlight {
-  border-top: 2px solid #ffffff;
-}
 /* Panels */
 .moon-panels.activity,
 .moon-panels.always-viewing {
   position: absolute;
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding: 0;
+  box-sizing: border-box;
+  padding: 20px 10px;
   overflow: visible;
   -webkit-transform: translate3d(0, 0, 0);
   pointer-events: none;
@@ -3211,22 +3218,30 @@
   max-width: 250px;
   text-align: start;
 }
+.moon-drawer-partial-client {
+  padding: 40px 20px 20px;
+}
 .moon-drawer-client {
   padding: 20px;
 }
 /* Drawers.css */
-.moon-drawers {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
 .moon-drawers-handles {
   text-align: center;
-  padding: 30px 0 10px;
+  padding: 45px 0 10px;
+}
+.moon-drawers-activator-wrapper {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  right: 0;
+  height: 10px;
+  z-index: 100;
 }
 .moon-drawers-activator {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
   height: 20px;
   background-color: #4b4b4b;
   z-index: 100;
@@ -3270,7 +3285,7 @@
   border-color: transparent transparent #ffffff transparent;
 }
 /* Activator is spotlight focused */
-.moon-drawers-activator.spotlight {
+.moon-drawers-activator-wrapper.spotlight .moon-drawers-activator {
   background-color: #ff2f7d;
 }
 .spotlight .moon-drawers-activator-nub {
@@ -3289,13 +3304,18 @@
 .spotlight .moon-drawers-activator-nub .up::after {
   border-color: transparent transparent #ff2f7d transparent;
 }
+.moon-drawers-handle-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 .moon-drawers-handle {
   display: inline-block;
   vertical-align: top;
 }
 .moon-drawers-drawer-container {
   position: relative;
-  padding: 10px 0;
 }
 .moon-drawers-client {
   position: relative;
